[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-rate-limiter"
version = "0.1.0"
description = "Intelligent rate limit handling for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Korah Stone", email = "korahcomm@gmail.com" }
]
keywords = [
    "ai",
    "agent",
    "rate-limit",
    "openai",
    "anthropic",
    "llm",
    "async"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
agent-rate-limiter = "agent_rate_limiter.cli:main"

[project.urls]
Homepage = "https://github.com/KorahStone/agent-rate-limiter"
Repository = "https://github.com/KorahStone/agent-rate-limiter"
Issues = "https://github.com/KorahStone/agent-rate-limiter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_rate_limiter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
